R642 slice 2: catalog.describe answers from the census relations
The tool stops reading the frozen catalog projection and becomes six queries
over the sql_ family: resolve the spelling, then columns, keys, indexes and
both foreign-key directions for the table it resolved.

Six queries is why the server now takes a StoreReader beside its handle. The
handle carries the session writer's own connection, where a nested transaction
is a savepoint rather than a boundary, so an answer assembled from several
relations could see one capture commit between its columns and its keys and
report a table that never existed. Reading through a second connection makes
that consistency structural rather than a property of whatever isolation level
H2 defaults to. DevMojo mints the reader from the same sessionStore.reader()
call that already gives the language server its own, and closes it beside it;
this module still cannot open a connection of its own, which is the ownership
rule the item is built on. The refusal gate is the reader, that being the thing
the tool answers through.

The transaction is owned by the method that assembles the answer rather than by
the handler, so a reader looking for "is this one transaction?" finds it where
the several queries are. A malformed spelling is answered before the
transaction opens, naming nothing the census could hold.

Two wire deltas, both stated in the item and each with a case:

Columns arrive in sql_column.ordinal order, which is the position
Table.fields() states and therefore the table definition's; the projection
carried a reflective field walk's order, documented as no order in particular.

Every unique constraint the database declares is reported, including one whose
columns the primary key already covers. candidateKeys deduplicated on column
set, which is a row-identity consumer's key-matching rule: that consumer wants
distinct sets and dedups for itself, and a discovery tool applying it could not
tell an agent what the database actua